Update theme, set to widescreen

--- a/hashtable_lunch_learn.tex
+++ b/hashtable_lunch_learn.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 
 \title{Hashtables}
 
@@ -9,6 +9,8 @@
 \author{Ethan Kent}
 \date{\today}
 \subject{Computer Science}
+
+\usetheme{Pittsburgh}
 
 \begin{document}
 \frame{\titlepage}
